--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,169 @@
-*{
-  font-family: 'Titillium Web', sans-serif;
+* {
+  font-family: "Titillium Web", sans-serif;
 }
 
-.banner{
+.banner {
   max-height: 750px;
 }
 
-.slide{
+.slide {
   max-height: 250px;
 }
 
-.left{
+.left {
   position: relative;
-  right: 200px; bottom: 130px;
+  right: 200px;
+  bottom: 130px;
 }
-.right{
+.right {
   position: relative;
-  left: 200px; bottom: 130px;
+  left: 200px;
+  bottom: 130px;
 }
 
-.headFoot{background: #0F2027;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #2C5364, #203A43, #0F2027);  
-    background: linear-gradient(to left, #2C5364, #203A43, #0F2027); 
-    }
-   
-.footfix{
-    display: flex;
+.headFoot {
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2c5364, #203a43, #0f2027);
+  background: linear-gradient(to left, #2c5364, #203a43, #0f2027);
+}
+
+.footfix {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background: #0f0c29; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(to left, #24243e, #302b63, #0f0c29);
+}
+
+.main__login {
+  width: 100%;
+  padding: 20px;
+  margin: auto;
+  margin-top: 100px;
+}
+.formulario__contenedor {
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  position: relative;
+}
+.formulario__trasero {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0, 128, 255, 0.5);
+}
+.formulario__trasero-login,
+.formulario__trasero-register {
+  margin: 100px 40px;
+  color: white;
+  transition: all 500ms;
+}
+.formulario__trasero div p,
+.formulario__trasero div button {
+  margin-top: 30px;
+}
+
+.formulario__trasero div h3 {
+  font-weight: 400;
+  font-size: 26px;
+}
+.formulario__trasero button {
+  padding: 10px 40px;
+  border: 2px solid #ffff;
+  background: transparent;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  color: white;
+  outline: none;
+  transition: all 300ms;
+}
+/* cambio de colores en trans */
+.formulario__trasero button:hover {
+  background: #fff;
+  /* colores para la trans de botones */
+  color: #46a2fd;
+}
+/* formularios  */
+.formulario__login-register {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 380px;
+  position: relative;
+  top: -200px;
+  left: 10px;
+}
+
+.formulario__login-register form {
+  width: 100%;
+  padding: 80px 20px;
+  background: #ffff;
+  position: absolute;
+  border-radius: 20px;
+}
+
+.formulario__login-register form h2 {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #46a2fd;
+}
+
+.formulario__login-register form input {
+  width: 100%;
+  margin-top: 20px;
+  padding: 10px;
+  border: none;
+  background: #f2f2f2;
+  font-size: 16px;
+  outline: none;
+}
+.formulario__login-register form button {
+  padding: 10px 40px;
+  margin-top: 40px;
+  border: none;
+  font-size: 14px;
+  background: #46a2fd;
+  color: white;
+  cursor: pointer;
+  outline: none;
+}
+.formulario__login {
+  opacity: 1;
+  display: block;
+}
+.formulario__register {
+  display: none;
+}
+/*  responsive de login */
+@media screen and (max-width: 850px) {
+  .main__login {
+    margin-top: 50px;
+  }
+  .formulario__trasero {
+    max-width: 350px;
+    height: 300px;
     flex-direction: column;
-    min-height: 100vh;
-    background: #0f0c29;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #24243e, #302b63, #0f0c29); 
-background: linear-gradient(to left, #24243e, #302b63, #0f0c29); 
+    margin: auto;
+  }
+  .formulario__trasero-login,
+  .formulario__trasero-register {
+    margin: 0px;
+    position: absolute;
   }
 
-      
-  
+  /* formulario responsive */
+  .formulario__login-register {
+    top: -10px;
+    left: -5px;
+    margin: auto;
+  }
+  .formulario__login-register form {
+    position: relative;
+  }
+}
