tabla de producto hecha, sin destacar ni publicar

--- a/css/admin.css
+++ b/css/admin.css
@@ -71,14 +71,10 @@
 
 
 
-Titulos, subtitulos y parrafos: 
-Inputs: 
-Iniciar sesión: 
-Fondo: 
-Navbar: 
-
+ 
+/* 
 Titulos, subtitulos y parrafos: #f9f9f9
 Inputs: #31343e
 Iniciar sesión: #1a1d29
 Fondo: #040714
-Navbar: #090b13
+Navbar: #090b13 */
